# knative_journey

knative_eventing/: build_and_push.sh  containers.yaml  db_config.yaml  trigger.yaml
mail-service/: pyproject.toml
mail-service/alembic/versions/: 3610680b1cf5_.py  59e7d13c9a88_.py  6d1369edb6de_.py
mail-service/app/: config.py  database.py  dependencies.py  mail_router.py  main.py  models.py  utils.py
user-service/: .dockerignore  Dockerfile  Dockerfile.runner  pyproject.toml  runner.py
user-service/alembic/: env.py
user-service/alembic/versions/: 0cacc17e0fc3_.py  4274e739c168_.py  456d9fd5fbb1_.py  54630c5d30f1_.py
user-service/app/: config.py  database.py  dependencies.py  events.py  main.py  models.py  schemas.py  user_router.py
user-service/tests/: test_hello_world.py
